--- a/src/app/create-character/create-character.component.html
+++ b/src/app/create-character/create-character.component.html
@@ -7,7 +7,7 @@
       name="name"
       class="form-control"
       ngModel
-      <!-- required -->
+      required
       #nameCtrl="ngModel"
     />
     <span class="help-block" *ngIf="nameCtrl.invalid && nameCtrl.touched"
