ajout de nav-bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="col-xs-12 col-sm-6">
-  <app-create-character></app-create-character>
-</div>
-<hr>
-<div class="col-xs-12">
-  <app-tabs></app-tabs>
-</div>
+      <app-header></app-header>
+  </div>
+  <hr />
+  <div class="col-xs-12">
+   <router-outlet></router-outlet>
+  </div>
 </div>
