--- a/src/app/create-character/create-character.component.html
+++ b/src/app/create-character/create-character.component.html
@@ -8,6 +8,7 @@
       class="form-control"
       ngModel
       required
+      required
       #nameCtrl="ngModel"
     />
     <span class="help-block" *ngIf="nameCtrl.invalid && nameCtrl.touched"
