ajout de nav-bar

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,8 @@
 <ul class="nav nav-pills">
-  <li class="nav-item">
-    <a class="nav-link" routerLink="/">Star Wars Character</a>
+  <li class="nav-item active" >
+    <a class="nav-link " routerLink="/characters"  routerLinkActive="active">Star Wars Character</a>
   </li>
-  <li class="nav-item">
-    <a class="nav-link" routerLink="/new-character">New Character</a>
+  <li class="nav-item"routerLinkActive="active" >
+    <a class="nav-link" routerLink="/new-character"  routerLinkActive="active">New Character</a>
   </li>
 </ul>
