--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -1,4 +1,4 @@
-<a  class="list-group-item  ">
+<a style="cursor: pointer;" class="list-group-item  ">
 
     <h5 class="mb-1">{{character.name}}</h5>
 
