--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
+<div class="jumbotron jumbotron-fluid text-center bg-primary text-light">
+  <div class="container">
+    <h1 class="display-4">Star Wars Characters</h1>
+    <hr class="bg-light">
+    <p class="lead">Add New Characters And Choose The Side</p>
+  </div>
+</div>
+
+
 <div class="container">
   <div class="col-xs-12 col-sm-6">
       <app-header></app-header>
